--- a/frontend/2do/package.json
+++ b/frontend/2do/package.json
@@ -11,12 +11,21 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo/webpack-config": "^0.16.18",
+    "@react-navigation/drawer": "^6.3.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "@ui-kitten/components": "^5.1.1",
     "expo": "~44.0.0",
+    "expo-cli": "^5.2.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "^2.1.3",
+    "react-native-reanimated": "^2.3.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
